--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "handlebars": "^4.0.5",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "node-uuid": "^1.4.7",
     "serve-favicon": "~2.3.0"
   }
 }
