--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.1",
     "handlebars": "^4.0.5",
     "jade": "~1.11.0",
+    "mongoose": "^4.4.3",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.7",
     "serve-favicon": "~2.3.0"
