--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^4.4.3",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.7",
+    "request": "^2.69.0",
     "serve-favicon": "~2.3.0"
   }
 }
