--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "client-sessions": "^0.7.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "^4.13.4",
     "handlebars": "^4.0.5",
     "jade": "~1.11.0",
     "mongoose": "^4.4.3",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.7",
     "request": "^2.69.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.3.0"
   }
 }
