--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "client-sessions": "^0.7.0",
     "cookie-parser": "~1.3.5",
@@ -13,7 +14,7 @@
     "express": "~4.13.1",
     "handlebars": "^4.0.5",
     "jade": "~1.11.0",
-    "mongoose": "^4.4.3",
+    "mongoose": "^4.4.4",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.7",
     "request": "^2.69.0",
