--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular-ui-bootstrap": "^1.2.1",
     "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "client-sessions": "^0.7.0",
