--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "node-uuid": "^1.4.7",
     "request": "^2.69.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
